modify styles & add footer

--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
         </ul>
     </nav>
 
-
     <header>
         <h1><span>Y</span><span>u</span><span>e</span><span>j</span><span>i</span><span>a</span><span>o</span>
             &nbsp;<span>S</span><span>h</span><span>i</span></h1>
@@ -36,7 +35,6 @@
                     together.
                 </p>
             </section>
-
             <section id="skills" class="col-4 skills">
                 <h2>Skills</h2>
                 <ul>
@@ -50,7 +48,6 @@
             </section>
         </section>
 
-
         <section id="portfolio" class="portfolio">
             <h2>Portfolio</h2>
             <h3>These are my projects.</h3>
@@ -59,8 +56,6 @@
                 <iframe src="./survey/survey-form.html" name="iframe" id="iframe" title="This is my project"></iframe>
             </div>
         </section>
-
-
 
         <section id="contact" class="contact">
             <h2>Contact Me</h2>
@@ -85,6 +80,12 @@
             </div>
         </section>
     </section>
+    <footer>
+        <div class="footer">
+            <p>Copyright &copy; 2024 Yuejiao Portfolio</p>
+            <p>Email: <a href="mailto:shiyuejiaosyj@gmail.com">shiyuejiaosyj@gmail.com</a></p>
+        </div>
+    </footer>
 
 </body>
 
